tests/snapshots/snapshot__parse_match_html.snap
---
source: tests/snapshot.rs
expression: parsed
---
{
  "comment": null,
  "comment_author": "Vkid E-sports:",
  "team_home": {
    "name": "Vkid E-Sports",
    "id": 32033
  },
  "team_away": {
    "name": "Xenon",
    "id": 7861
  },
  "score_home": 4,
  "score_away": 0,
  "map": "koth_ashville_final",
  "week": 1,
  "format": "9v9",
  "default_date": "Mon Oct 09"
}
