tests/snapshots/snapshot__parse_player_classes_html.snap
---
source: tests/snapshot.rs
expression: parsed
---
{
  "name": "Dirty Sneeds Don",
  "avatar": "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/00/00410e6516bc5d5dcc10004c4fa972950e6a5e60_full.jpg",
  "steam_id": "76561198049312442",
  "honors": [
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 32,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 31,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 30,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 29,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 28,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Premium EU",
      "season": 27,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Premium EU",
      "season": 26,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 25,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 24,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 23,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 22,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 21,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 20,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Gold",
      "season": 19,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 18,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 17,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 32,
      "team": {
        "name": "Ulku Ocaklari",
        "id": 29445
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 31,
      "team": {
        "name": "Ulku Ocaklari",
        "id": 29445
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 30,
      "team": {
        "name": "Ulku Ocaklari",
        "id": 29445
      }
    }
  ],
  "teams": [
    {
      "team": {
        "name": "Xenon",
        "id": 7861
      },
      "league": "TF2 Highlander - Euro Platinum",
      "since": "2015-09-23"
    }
  ],
  "favorite_classes": [
    "demoman",
    "soldier",
    "scout"
  ]
}
