tests/snapshots/snapshot__parse_player_details_html.snap
---
source: tests/snapshot.rs
expression: parsed
---
[
  {
    "format": "TF2 Highlander",
    "team": {
      "name": "Xenon",
      "id": 7861
    },
    "division": "Euro Platinum",
    "joined": "2013-08-09",
    "left": null
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "UGC 6s",
      "id": 6929
    },
    "division": "Europe",
    "joined": "2017-02-21",
    "left": null
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "sExy eSports",
      "id": 17736
    },
    "division": "Euro Steel",
    "joined": "2015-09-10",
    "left": "2017-01-22"
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "BigHorseDong",
      "id": 16277
    },
    "division": "Euro Steel",
    "joined": "2015-06-06",
    "left": "2015-09-10"
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "sExy eSports",
      "id": 17736
    },
    "division": "Euro Steel",
    "joined": "2015-06-02",
    "left": "2015-06-06"
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "BigHorseDong",
      "id": 16277
    },
    "division": "Euro Steel",
    "joined": "2015-02-01",
    "left": "2015-06-02"
  },
  {
    "format": "TF2 6vs6",
    "team": {
      "name": "Necronoms",
      "id": 8622
    },
    "division": "Euro Steel",
    "joined": "2013-09-07",
    "left": "2014-12-23"
  },
  {
    "format": "TF2 4vs4",
    "team": {
      "name": "sExy eSports",
      "id": 17790
    },
    "division": "Silver Euro",
    "joined": "2015-06-02",
    "left": "2017-08-15"
  }
]
