tests/snapshots/snapshot__parse_player_empty_html.snap
---
source: tests/snapshot.rs
expression: parsed
---
{
  "name": "",
  "avatar": "",
  "steam_id": "76561197967332647",
  "honors": [
    {
      "format": "9v9",
      "division": "NA Steel",
      "season": 6,
      "team": {
        "name": "Penguin Doom Squad",
        "id": 3975
      }
    }
  ],
  "teams": [],
  "favorite_classes": []
}
