tests/snapshots/snapshot__parse_player_html.snap
---
source: tests/snapshot.rs
expression: parsed
---
{
  "name": "Icewind demostf",
  "avatar": "https://avatars.akamai.steamstatic.com/75b84075b70535c5cfb3499af03b3e4e7a7b556f_full.jpg",
  "steam_id": "76561198024494988",
  "honors": [
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 32,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 31,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 30,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 29,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 28,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Premium EU",
      "season": 27,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Premium EU",
      "season": 26,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 25,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 24,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 23,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 22,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 21,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Platinum",
      "season": 20,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Gold",
      "season": 19,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 18,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 17,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 16,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 15,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 14,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 13,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Silver",
      "season": 12,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "9v9",
      "division": "Euro Steel",
      "season": 11,
      "team": {
        "name": "Xenon",
        "id": 7861
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 35,
      "team": {
        "name": "Controller Gamers",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 34,
      "team": {
        "name": "Bye week",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 33,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 32,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 31,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 30,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 29,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 28,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 27,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 26,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 25,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 24,
      "team": {
        "name": "meta.tf",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Europe",
      "season": 23,
      "team": {
        "name": "Giel and the 9wiels",
        "id": 6929
      }
    },
    {
      "format": "6v6",
      "division": "Euro Platinum",
      "season": 19,
      "team": {
        "name": "sExy eSports",
        "id": 17736
      }
    },
    {
      "format": "6v6",
      "division": "Euro Steel",
      "season": 18,
      "team": {
        "name": "BigHorseDong",
        "id": 16277
      }
    },
    {
      "format": "6v6",
      "division": "Euro Steel",
      "season": 13,
      "team": {
        "name": "Necronoms",
        "id": 8622
      }
    },
    {
      "format": "4v4",
      "division": "Silver Euro",
      "season": 6,
      "team": {
        "name": "sExy eSports",
        "id": 17790
      }
    },
    {
      "format": "4v4",
      "division": "Silver Euro",
      "season": 5,
      "team": {
        "name": "sExy eSports",
        "id": 17790
      }
    }
  ],
  "teams": [
    {
      "team": {
        "name": "UGC 6s",
        "id": 6929
      },
      "league": "TF2 6vs6 - Europe",
      "since": "2017-02-21"
    },
    {
      "team": {
        "name": "Xenon",
        "id": 7861
      },
      "league": "TF2 Highlander - Euro Platinum",
      "since": "2013-08-09"
    }
  ],
  "favorite_classes": [],
  "country": null
}
